--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Colors and color palettes"
+title: "Colors and color functions"
 author: "SPDS, uni.kn"
 date: "2020 12 18"
 output: 
@@ -36,8 +36,9 @@ knitr::opts_chunk$set(echo = TRUE,
 <img src = "../inst/pix/unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
 </a>
 
-This vignette explains which colors and color palettes are provided by **unikn** and how they can be accessed and used. 
-(See the vignette on [text](text.html) for information on text boxes and decorations.) 
+This vignette explains the colors, color palettes, and color-related functions provided by the **unikn** package. 
+(See the vignettes on [color recipes](color_recipes.html) and [institutional colors](color_inst.html) for more specialized tasks 
+and the vignette on [text](text.html) for information on text boxes and decorations.) 
 
 Please install and/or load the **unikn** package to get started: 
 
@@ -48,8 +49,10 @@ library('unikn')             # loads the package
 
 ## Overview 
 
-There are two main functions to interact with the color palettes in the **unikn** package: 
-`seecol()` and `usecol()`. 
+The **unikn** package provides some colors (e.g., `Seeblau`) and color palettes (e.g., `pal_unikn`). 
+However, its functionality mainly comes from color-related functions that are useful beyond the dedicated colors of this package. 
+
+The package provides two main functions for interacting with color palettes: `seecol()` and `usecol()`. 
 
 1. `seecol()` is a general-purpose tool for viewing (or _seeing_) color palettes. 
 The `seecol()` function takes two main arguments:
@@ -69,11 +72,12 @@ The `usecol()` function also takes arguments for conveniently manipulating color
     2. `n` specifies the number of desired colors (with a default of `n = "all"`); 
     3. `alpha` adjusts the opacity of all colors in `pal` (e.g., `alpha = .50` for medium transparency). 
 
-Two additional functions serve in auxiliary roles:
 
-1. `newpal()` allows defining new color palettes (typically as data frames). 
+Two additional functions serve in auxiliary roles: 
 
-2. `grepal()` searches a color palette `x` (i.e., a vector of color names or data frame of named colors) for a `pattern` and returns those that match the pattern (or regular expression). 
+1. `newpal()` allows defining new color palettes (typically as data frames with named colors). 
+
+2. `grepal()` searches a color palette\ `x` (i.e., a vector of color names or data frame of named colors) for a `pattern` and returns those that match the pattern (or regular expression). 
 
 
 ## Viewing colors and color palettes with `seecol()`
@@ -152,7 +156,7 @@ Thus, the following will only plot the palette without doing anything else with 
 seecol(pal_bordeaux)
 ```
 
-### Other parameters of `seecol`
+### Other parameters of `seecol()`
 
 The `seecol()` function provides some aesthetic parameters for adjusting how color palettes are plotted:
 
@@ -191,8 +195,6 @@ seecol("pal_seegruen")
 seecol("seegruen")
 seecol(seegruen)  # issues a warning, but works 
 ```
-
-<!-- +++ here now +++: -->
 
 
 ## Customizing color palettes
@@ -271,7 +273,6 @@ dat <- matrix(sample(5:10, size = 10, replace = TRUE), ncol = 5)
 barplot(dat, beside = TRUE, col = my_pair)
 ```
 
-
 ### Controlling transparency
 
 Both `seecol()` and `usecol()` accept an `alpha` argument (in a range from\ 0 to\ 1) for controlling the transparency of color palettes, with higher values for `alpha` corresponding to lower transparency (i.e., higher opacity). 
@@ -295,7 +296,6 @@ Setting opacity for comparing of multiple color palettes:
 ```{r transparency-all, fig.width = 5, fig.height = 4, fig.align = 'center'}
 seecol("grad", alpha = 0.67, title = "Seeing color palettes with added transparency")
 ```
-
 
 ### Creating and comparing custom palettes 
 
@@ -386,354 +386,7 @@ grepal("see", pal_unikn)
 seecol(grepal("blau", pal_unikn_pref), title = "Shades of 'blau' in pal_unikn_pref")
 ```
 
-
-## Usage examples 
-
-The following examples illustrate how plotting functions in R can use the **unikn** color palettes, as well as the `seecol()`, `usecol()`, `newpal()`, and `grepal()` functions. 
-
-### Using colors in **base** R
-
-**Task:** Using **unikn** colors in a visualization created by **base** R graphics. 
-
-When using the `plot()` function of **base R** for a scatterplot, we can 
-use the `usecol()` function in combination with any color palette (e.g., `pal_unikn`) as the `col` argument: 
-
-```{r demo-scatterplot, eval = TRUE, fig.width = 5, fig.height = 5, fig.align = 'center', collapse = TRUE}
-plot(x = runif(99), y = runif(99), "p", pch = 16, cex = 4, 
-     col = usecol(pal_unikn, alpha = .50),  # with transparency
-     main = "99 transparent dots", axes = FALSE, xlab = NA, ylab = NA)
-```
-
-### Using colors in **ggplot2**
-
-**Task:** Using **unikn** colors in a visualization created by the **ggplot2** package.
-
-When using the `ggplot()` function of **ggplot2** (e.g., for an area plot), we can use the `usecol()` function for defining a color palette that is used as the `values` of the 
-`scale_color_manual()` or `scale_fill_manual()` functions:
-
-```{r use-pal-ggplot2, eval = FALSE, fig.width = 7, fig.asp = .618, fig.align = 'center', collapse = TRUE}
-# Example based on https://www.r-graph-gallery.com/137-spring-shapes-data-art/ 
-
-# (1) Create data: ---- 
-ngroup <- 50
-names <- paste("G_", seq(1, ngroup), sep = "")
-df <- data.frame()
-
-set.seed(3)
-for(i in seq(1:30)){
-    data = data.frame(matrix(0, ngroup, 3))
-    data[, 1] = i
-    data[, 2] = sample(names, nrow(data))
-    data[, 3] = prop.table(sample( c(rep(0, 100), c(1:ngroup)), nrow(data)))
-    df = rbind(df, data)}
-colnames(df) <- c("X","group","Y")
-df <- df[order(df$X, df$group) , ]
-
-# (1) Choose colors: ---- 
-
-# (a) using RColorBrewer: 
-# library(RColorBrewer)
-# cur_col <- brewer.pal(11, "Paired") 
-# cur_col <- colorRampPalette(cur_col)(ngroup)
-# cur_col <- cur_col[sample(c(1:length(cur_col)), size = length(cur_col))]  # randomize
-
-# (b) using unikn:
-library(unikn)
-cur_col <- usecol(pal = pal_unikn, n = ngroup)
-# cur_col <- cur_col[sample(c(1:length(cur_col)), size = length(cur_col))]  # randomize
-
-# (3) Use ggplot2: ---- 
-
-library(ggplot2)
-
-ggplot(df, aes(x = X, y = Y, fill = group)) + 
-  geom_area(alpha = 1, color = Grau, size = .01 ) +
-  scale_fill_manual(values = cur_col) +
-  theme_void() +
-  theme(legend.position = "none")
-```
-
-<img src = "./../inst/pix/README-use_pal_ggplot2-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/>
-
-### Viewing and comparing color palettes 
-
-**Task:** View a color palette. 
-
-```{r seecol-example-1, fig.width = 5, fig.asp = .8, fig.align = 'center'}
-seecol(hcl.colors(10, "Vik"))
-```
-
-**Task:** Compare multiple color palettes.
-
-```{r seecol-example-2, fig.width = 6, fig.asp = 1.2, fig.align = 'center'}
-# Parameters:
-n_col <-  8   # colors in each palette
-n_pal <- 20   # length(hcl.pals())
-ptype <- NULL # c("diverging", "divergingx", "qualitative", "sequential")[4] 
-s_pal <- sample(x = hcl.pals(type = ptype), size = n_pal, replace = FALSE)
-
-# Initialize:
-# t_lbl <- paste0("See ", n_pal, " random ", ptype, " HCL color palettes (n = ", n_col, ")") 
-t_lbl <- paste0("See ", n_pal, " random HCL color palettes (n = ", n_col, ")") 
-l_pal <- vector("list", n_pal)  # lists of palettes
-
-# Loop:
-for (i in 1:n_pal){
-
-  l_pal[[i]] <- usecol(hcl.colors(n = n_col, palette = s_pal[i]))
-    
-}
-
-# See all palettes:
-seecol(pal = l_pal, 
-       pal_names = s_pal,
-       col_brd = "white", lwd_brd = 1,
-       title = t_lbl)
-```
-
-### Creating a color palette 
-
-**Task:** Create a new color palette (with color names).
-
-```{r newpal-example, fig.width = 5, fig.asp = .8, fig.align = 'center'}
-color_google <- c("#4285f4", "#34a853", "#fbbc05", "#ea4335")
-
-names_google <- c("blueberry", "sea green", "selective yellow", "cinnabar")
-
-pal_google   <- newpal(color_google, names_google)
-
-seecol(pal_google, title = "Colors of the Google logo", col_brd = "white", lwd_brd = 10)
-```
-
-
-### Finding colors by name 
-
-**Task:** Find colors by matching their names to a pattern (as a regular expression). 
-
-Here are some additional examples for using the `grepal()` function for finding colors by their names (or a pattern): 
-
-```{r grepal-example-1, fig.width=5, fig.height=4, fig.align = 'center'}
-# Get color palettes matching a pattern:
-pal_1 <- grepal("orange")
-pal_2 <- grepal("olive")
-pal_3 <- grepal("white")
-
-# See individual palettes:
-# seecol(pal_1, title = "Shades of 'orange' colors()")
-# seecol(pal_2, title = "Shades of 'olive' colors()")
-seecol(pal_3, title = "Shades of 'white' colors()", col_bg = "grey90")
-```
-
-Providing a list of color palettes to the `pal` argument of the `seecol()` function allows comparing multiple color palettes: 
-
-```{r grepal-example-2, fig.width=6, fig.asp=.50, fig.align = 'center'}
-# See multiple color palettes:
-seecol(pal = list(pal_1, pal_2, pal_3), 
-       pal_names = c("orange", "olive", "white"), 
-       col_bg = "grey90")
-```
-
-The last example illustrates that (a)\ the `pattern`\ argument of `grepal()` can use regular expressions, and that (b)\ the `x`\ argument of `grepal()` works with vectors or data frames (e.g., the **unikn** color palettes). 
-
-Let's compare different types of "blue", "orange", and "purple or violet" provided by the **grDevices** vector of named `colors()` with various shades of "blau", "pink", "peach" and "bordeaux" provided by **unikn** color palettes: 
-
-```{r grepal-example-3, fig.width=6, fig.align=.50, fig.align = 'center'} 
-# Search colors() with specific patterns (in their names): 
-blues    <- grepal("blue$")   # ending on "blue"
-oranges  <- grepal("orange")  # containing "orange"
-purpviol <- grepal("purple|violet")  # containing "purple" or "violet"
-
-# Search unikn palettes for color names: 
-blaus_1 <- grepal("blau", pal_unikn)
-blaus_2 <- grepal("blau", pal_karpfenblau)
-pinks <- grepal("pink", pal_pinky)
-peach <- grepal("peach", pal_peach)
-baux  <- grepal("bordeaux", pal_bordeaux)
-
-# See multiple color palettes: 
-seecol(list(blues, oranges, purpviol, 
-            c(blaus_1, blaus_2, pinks, peach, baux)),
-       pal_names = c("blues", "oranges", "purpviol", "unikn colors"),
-       title ="Comparing custom color palettes")
-```
-
-
-## Other institutions 
-
-The color palettes included in the **unikn** package are based on the CD manual of the [University of Konstanz](https://www.uni-konstanz.de/), Germany. 
-However, the functionality provided by the package makes it easy and straightforward to define and use your own color scales. 
-In the following, we provide examples to illustrate how this can be achieved for other institutions. 
-
-### Defining colors and color palettes 
-
-```{r Cardiff, echo = FALSE, eval = FALSE, fig.align = 'center', fig.width = 5, fig.height = 3}
-# Cardiff University, UK: 
-# ToDo. 
-```
-
-#### A. [University of Freiburg](https://www.uni-freiburg.de), Germany: 
-<img src = "../inst/pix/logo_freiburg.png" align = "right" width = "120px" alt = "Uni Freiburg" style = "border:10;"/> 
-
-The [Albert-Ludwigs Universität Freiburg](https://www.uni-freiburg.de) provides fairly extensive information on its corporate color scheme (available [here](https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt) and [here](https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben)). 
-Colors can be defined in a variety of ways, but R comes with convenient tools (like `col2rgb` and `convertColor` in **grDevices**) to handle most cases. The most straightforward way of creating a new color palette in R is by using its HEX/HTML code (provided in character format). 
-As the [University of Freiburg](https://www.uni-freiburg.de) kindly provides their colors in this format, we can easily define the corresponding color palettes as named vectors: 
-
-```{r freiburg-cols, fig.width = 5, fig.asp = .8, fig.align = 'center', fig.show = "hold", collapse = TRUE}
-# Basic colors: https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt
-
-pal_freiburg_bluered <- c("#004a99", "#c1002a")
-names(pal_freiburg_bluered) <- c("uni-blau", "uni-rot")
-
-pal_freiburg_basic <- c("#004a99", "white", "#c1002a")  # add "white" for better gradients
-names(pal_freiburg_basic) <- c("uni-blau", "weiss", "uni-rot")
-
-# Web colors: https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben  
-
-pal_freiburg_blue <- c("#004a99", "#2a6ebb", "#6f9ad3")
-names(pal_freiburg_blue) <- c("blue-1", "blue-2", "blue-3")
-
-pal_freiburg_grey <- c("#f2f3f1", "#e0e1dd", "#d5d6d2", "#c9cac8", 
-                       "#b2b4b3", "#9a9b9c", "#747678", "#363534")
-names(pal_freiburg_grey) <- c("grey-0", "grey-1", "grey-2", "grey-3", 
-                              "grey-5", "grey-7", "grey-9", "grey-font")
-
-pal_freiburg_info <- c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
-                       "#4d4f53", "#747678", "#b2b4b3", "#d5d6d2", "#e98300", "#efbd47")
-names(pal_freiburg_info) <- c("mid-blau", "hell-blau", "dark-red", "hell-red", "mid-green", "hell-green", 
-                              "anthrazit", "dark-grey", "mid-grey", "hell-grey", "orange", "gelb")
-```
-
-Alternatively, we can define both (colors and names) in one step by using the `newpal()` function:
-
-```{r freiburg-newpal}
-pal_freiburg_info <- newpal(col = c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
-                                    "#4d4f53", "#747678", "#b2b4b3", "#d5d6d2", "#e98300", "#efbd47"),
-                            names = c("mid-blau", "hell-blau", "dark-red", "hell-red", "mid-green", "hell-green", 
-                                      "anthrazit", "dark-grey", "mid-grey", "hell-grey", "orange", "gelb")
-                            )
-```
-
-Once a new color palette has been defined (and is available in your current R environment), we can use the `seecol()` and `usecol()` functions to view, modify, and use the palette: 
-
-```{r freiburg-seecol, fig.width = 5, fig.asp = .8, fig.align = 'center', collapse = TRUE}
-seecol(pal_freiburg_info)            # view color palette
-# seecol(pal_freiburg_basic, n = 7)  # extend color palette
-# seecol(c(pal_freiburg_blue, "white", pal_freiburg_grey))  # mix color palette
-```
-
-#### B. [Princeton University](https://princeton.edu/), USA: 
-<img src = "../inst/pix/logo_princeton.jpg" align = "right" width = "180px" alt = "Princeton University" style = "border:10;"/>
-
-The color scheme of [Princeton University](https://princeton.edu/) is easily recognized by its combination of orange with black and white elements. The official guidelines (available [here](https://communications.princeton.edu/guides-tools/logo-graphic-identity)) define "Princeton Orange" as Pantone (PMS) 158&nbsp;C. 
-
-- The PANTONE&trade; color finder at <https://www.pantone.com/color-finder/158-C> yields the following color values:
-
-    - RGB: `232 119 34`  
-    - HEX/HTML: `#E87722`  
-    - CMYK: `0 62 95 0`  
-
-- However, the guide also specifies and distinguishes between 2 additional versions of orange and provides the following HEX/HTML values for them:  
-
-    - Orange on white: "#E77500"  
-    - Orange on black: "#F58025"  
-
-These definitions suggest defining three separate versions of orange and corresponding color palettes: 
-
-```{r princeton-cols, fig.width = 5, fig.asp = .8, fig.align = 'center', fig.show = "hold", collapse = TRUE}
-# HEX values for 3 shades of orange: 
-orange_basic <- "#E87722"  # Pantone 158 C
-orange_white <- "#E77500"  # orange on white
-orange_black <- "#F58025"  # orange on black
-
-# Defining color palettes:
-pal_princeton <- c(orange_basic, "black")
-names(pal_princeton) <- c("orange", "black")
-
-# Define color palette and names (in 2 steps):
-pal_princeton_1 <- c(orange_white, "white", "black")
-names(pal_princeton_1) <- c("orange_w", "white", "black")
-
-# Define both colors and names (in 1 step) by using the `newpal()` function:
-pal_princeton_1 <- newpal(col = c("#E77500", "white", "black"),
-                          names = c("orange_w", "white", "black"))
-                          
-# Define 2nd color palette:
-pal_princeton_2 <- newpal(col = c(orange_black, "black", "white"), 
-                          names = c("orange_b", "black", "white"))
-
-# View color palette (with custom background color and title):
-seecol(pal_princeton_1,  # view color palette
-       col_bg = "grey90", title = "Color palette of Princeton University")
-```
-
-#### C. [Max Planck Society](https://www.mpg.de/de), Germany: 
-<img src = "../inst/pix/logo_MPG.png" align = "right" alt = "MPG" width = "150px" style = "border:10;"/>
-
-The CD manual (available [here](https://docplayer.org/2328711-Max-planck-institut-das-erscheinungsbild-der-max-planck-gesellschaft-4-ueberarbeitete-auflage.html)) of the [Max Planck Society](https://www.mpg.de/de) specifies the use of 2&nbsp;primary colors: 
-
-- Green as Pantone 328: Using the PANTONE&trade; color finder at <https://www.pantone.com/color-finder/328-C> yields the following color values:
-
-    - RGB: `0 115 103`    
-    - HEX/HTML: `#007367`   
-    - CMYK: `100 10 61 38`  
-
-- Grey as Pantone 427: Using the PANTONE&trade; color finder at <https://www.pantone.com/color-finder/427-C> yields the following color values: 
-
-    - RGB: `208 211 212`  
-    - HEX/HTML: `#D0D3D4`   
-    - CMYK: `7 3 5 8`   
-
-```{r mpg-rgb-cols, echo = FALSE, eval = FALSE, fig.width = 6, fig.asp = .618, fig.align = 'center', collapse = TRUE}
-# Using RGB values: 
-pal_mpg <- data.frame(# named colors: 
-  "mpg_green" = rgb( 17, 102,  86, maxColorValue = 255),
-  "mpg_gray"  = rgb(221, 222, 214, maxColorValue = 255),
-  "mpg_grey"  = rgb(208, 211, 212, maxColorValue = 255)
-  )
-seecol(pal = list(pal_mpg))  # Ooops...
-```
-
-```{r mpg-hex-cols, echo = FALSE, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
-# Using HEX values:
-mpg_green <- "#007367"
-mpg_grey  <- "#D0D3D4"
-
-# col2rgb(mpg_green)
-# col2rgb(mpg_grey)
-
-pal_mpg <- usecol(pal = c(mpg_green, "white", mpg_grey))
-```
-
-Again, the easiest way of defining a corresponding color palette is by creating a named vector. 
-To allow for better color gradients, we insert the color `"white"` between the 2&nbsp;dedicated colors: 
-
-```{r mpg-pal-def, fig.width = 5, fig.asp = .8, fig.align = 'center', collapse = TRUE}
-pal_mpg <- c("#007367", "white", "#D0D3D4")
-names(pal_mpg) <- c("mpg green", "white", "mpg grey")
-```
-
-As before, can now use the `seecol()` and `usecol()` functions to view, modify, and use the new `pal_mpg` color palette: 
-
-```{r mpg-seecol, fig.width = 5, fig.asp = .8, fig.align = 'center', collapse = TRUE}
-seecol(pal_mpg, 
-       col_brd = "black", lwd_brd = 1, 
-       title = "Colors of the Max Planck Society")
-```
-
-### Comparing custom color palettes 
-
-Once a new palette has been defined (and is available in your current R environment), the `seecol()` and `usecol()` functions allow comparing, scaling, and using them in the same fashion as the native **unikn** color palettes: 
-
-```{r compare-custom-pals, eval = TRUE, fig.width = 5, fig.asp = .50, fig.align = 'center', collapse = TRUE}
-# Compare and extend custom color palettes:
-# seecol(list(pal_freiburg_info, pal_freiburg_basic, pal_mpg, pal_princeton_1))
-
-# Scaled version: 
-seecol(list(pal_freiburg_basic, pal_princeton_1, pal_mpg, pal_unikn), n = 9,
-       pal_names = c("Uni Freiburg", "Princeton Uni", "Max Planck", "Uni Konstanz"),
-       title = "Comparing scaled color palettes")
-```
-
+<!-- +++ here now +++: -->
 
 ## Resources
 
@@ -749,18 +402,20 @@ B. Online documentation:  | [Release version](https://hneth.github.io/unikn/)   
 
 ## Vignettes
 
+The following vignettes provide instructions and examples for using the **unikn** colors, color palettes, and functions: 
+
 <!-- unikn pkg logo and link: -->
 <a href = "https://github.com/hneth/unikn/">
 <img src = "../inst/pix/unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
 </a> 
 
-The following vignettes provide instructions and examples for using the **unikn** objects and functions: 
-
 <!-- Table of vignettes: -->
 
 | Nr.  | Vignette | Content    |        
 | ---: |:---------|:-----------|
-| 1. | [Colors](colors.html) | Colors and color palettes | 
-| 2. | [Text](text.html)     | Text boxes and decorations | 
+| 1. | [Colors](colors.html) | Colors and color functions |
+| 2. | [Color recipes](color_recipes.html) | Recipes for color-related tasks |
+| 3. | [Institutional colors](color_inst.html) | Creating color palettes for other insitutions |
+| 4. | [Text](text.html)     | Text boxes and decorations | 
 
 <!-- eof. -->
